--- a/no-footer.html
+++ b/no-footer.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>全国在职MBA</title>
+  <title>全国在职MBA-没底部</title>
   <link rel="stylesheet" type="text/css" href="https://img.thea.cn/public/css/base.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="https://img.thea.cn/jingjia/public/202010/hbj/n-mba/css/index.css">
 
   <script type="text/javascript" src="https://img.thea.cn/public/js/jquery-1.12.3.min.js"></script>
 </head>
@@ -875,17 +875,7 @@
       </ul>
     </div>
   </div>
-  <div id="footer">
-    <p class="links">
-      <a href="https://www.thea.cn/about/aboutus.htm" target="_blank">关于我们</a>|
-      <a href="javascript:void(0)" onclick="ECHATCustomMiniChat()">联系我们</a>|
-      <a href="https://www.thea.cn/about/banquan.htm" target="_blank">版权声明</a>|
-      <a href="https://www.thea.cn/about/sitemap.htm" target="_blank">网站地图</a>|
-      <a href="https://www.thea.cn/about/shengming.html" target="_blank">法律声明</a>
-    </p>
-    <p>版权所有 深圳市诺达教育股份有限公司 © <a href="https://www.thea.cn">www.thea.cn</a> All Rights Reserved 粤ICP备<a
-        href="http://www.beian.miit.gov.cn/" target="_blank">10032899</a>号</p>
-  </div>
+  
   <div class="bottom-site"></div>
   <div class="bottom">
     <div class="wrap">
